--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Aldi-Offc",
+  "name": "Inc BOTz",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/hyuura-official",
+  "repository": "https://github.com/Bellfroutcs",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": [
     "bot",
